Neadersassisk verbeaterd, NSS

--- a/Randstad_(gebeed).mw
+++ b/Randstad_(gebeed).mw
@@ -1,82 +1,105 @@
 [[Bestaand:Randstad.png|thumb|right|450px|Koart van de Raandstad.]]
 [[Bestaand:Randstad Population Bubbles.svg|thumb|right|450px|Bubbeldiagromme det t tal van inwönnern in de greute en midlgreute steedn zeen loatt.]]
 
-'''Raandstad''' of '''Raandstad Hollaand''' ([[Nederlaands]]: ''Randstad'' of ''Randstad Holland'') is n steedlik gebeed (ok wal [[konurbasie]] enömn) in [[Nederlaand]], bestoand uut nen reeng van steedn röndömme n netuurgebeed, bekant a't [[Greane Heart]]. De Raandstad is mit önnefear 7 miljoen inwönners t diktstin-ewönnende gebeed van t hele Nederlaand en behaawt de vier greutste steedn van Nederlaand ([[Amsterdam]], [[Rötterdaam (stad)|Rötterdam]], [[Utrecht (stad)|Utrech]] en [[N Heeg]]), binn'n zinne greanzn. Mit [[Londen]] en [[Paries]], zeent de Raandstad, n [[Vloamse Ruut]] en t [[Rien-Roer-Gebeed]] in Duutslaand de wichtigste steedlike plöatse in [[Europa (continent)|Europa]].
+'''Randstad''' of '''Randstad Holland''' (Nederlandsk: ''Randstad'' of ''Randstad Holland'') is n städelik gebeed (ouk wal konurbaty enöümd) in Nederland, wat besteyt uut nen ring van städen rundümme en natuurgebeed, bekend as et Gröne Härte. De Randstad is med ungeveyr 7 miljoon inwoaners et drukst bevolkede gebeed van et heyle Nederland en hevt de veer gröytste städen van Nederland (Amsterdam, Rotterdam, Utrecht en Den Haeg), binnen syne grensen. Med Londen en Parys, sint de Randstad, den Vlaamsken Ruut en et Ryn-Rur-Gebeed in Düütskland de vöärnaamste städelike woansteades in Europa.
 
-In de Raandstad ligt önner oandre n greutsten hoawen van Europa ([[Rötterdaam (stad)|Rötterdam]]) en krenks n half van aale universiteitn dee'j i't laand feendn könt. Ok de regerige hef zin staandploats hier ([[N Heeg]]).
+In de Randstad ligt under andere n gröytsten hoawen van Europa (Rotterdam) en souwat de hälvde van alle universiteiten van Neaderland. Ouk de regearing hüüst hyr (Den Haeg).
 
-Öp de Raandstad an wör ok söms döarverwiezn as [[Deltametropool]]. Dissen term verwiest noar de ambisie van de Raanstad öm as ean greute agglomeroasie öp te goan en doarmit te teengnwerkn teegn de oandre metropooln öp disse wearld.
+Når de Randstad wörd ouk mangs döarverweysen as Deltametropool. Dissen term verwist når de ambity van de Ranstad üm eyn grout verstädelikt gebeed te worden en dårmed de stryd an te gån med andere groutstäden up disse wearld.
 
-== Geogroafie ==
-=== Liggige en begreanzige ===
-De Raandstad is oawer vier proveensies uutsmeard: [[Noord-Hollaand]], [[Zuud-Hollaand]], [[Flevolaand]] en [[Utrecht (previnsie)|Utrech]].
-De woarlike greute van de Raandstad is nich bekant, veural ömdet de greanzn nimmer èkt an-egèfn zeent. Steedn as [[Alkmaar|Alkmoar]], [[Hoorn (Noord-Hollaand)|Hoorn]] en [[Lelystad]] zeent nich immer as deiln van de Raandstad ezeen, tarwiel oandrn (ok disse gemeantn) zichzelve wal a'n deil van Raandstad beskaawt.
+== Geografy ==
 
-=== Steedn ===
+=== Ligging en begrensing ===
+De Randstad is oaver veer provincys uutsmeard: Noordholland, Süüdholland, Flevoland en Utrecht. De woarlike grötde van de Randstad is nich bekend, vöäral ümdet de grensen nimmer echt anegeaven sint. Städen as Alkmoar, Hoorn en Lelystad wordet nich immer as deylen van de Randstad eseen, terwyl as anderen (ouk disse gemeynden) sichselv wal as en deyl van de Randstad beskouwet.
+
+=== Städen ===
 [[Bestaand:Waag1.jpg|thumb|right|200px|[[Amsterdam]].]]
 [[Bestaand:De Veranda.jpg|thumb|right|200px|[[Rötterdaam (stad)|Rötterdam]].]]
 [[Bestaand:Het Zieken - Den Haag.jpg|thumb|right|200px|[[N Heeg]].]]
 [[Bestaand:Nieuwegracht 2.JPG|thumb|right|200px|[[Utrecht (stad)|Utrech]].]]
-De wichtigste [[stad (woonstee)|steedn]] in de Raandstad zeent ok de vier greutste steedn van Nederlaand. A'ne gemeante hebt zee aale mear as 300.000 inwönnern. Doarbiej hef de Raandstad ok nog akt gemeantn mit mear as 100.000 inwönnern. Hieronder is n oawerzeegt van alle steedn mit mear as 100.000 inwönnern in de Raandstad.
+De belangrykste städen in de Randstad sint ouk de veer grötste städen van Nederland. As gemeynde hebbet see allemåle meyr as 300.000 inwoaners. Dårby hevt de Randstad ouk nog acht gemeynden med meyr as 100.000 inwoaners. Hyronder dårvan en oaversicht:
 
-* [[Amsterdam]] in [[Noord-Hollaand]] mit 780.152 inwönnern.
-* [[Rötterdaam (stad)|Rötterdam]] in [[Zuud-Hollaand]] mit 610.174 inwönnern.
-* [[N Heeg]] in ''Zuud-Hollaand'' mit 494.898 inwönnern.
-* [[Utrecht (stad)|Utrech]] in [[Utrecht (previnsie)|Utrech]] mit 311.254 inwönnern.
-* [[Almere]] in [[Flevolaand]] mit 190.699 inwönnern.
-* [[Haorlem|Hoarlm]] in ''Noord-Hollaand'' mit 150.611 inwönnern (önnefear soo völle as [[Eanske]] hef).
-* [[Zaanstad|Zoanstad]] in ''Noord-Hollaand'' mit 146.904 inwönnern.
-* [[Amesfoort]] in ''Utrech'' mit 146.571 inwönnern.
-* [[Hoarlemmermeer|Hoarlmermar]] in ''Noord-Hollaand'' mit 143.364 inwönnern.
-* [[Sweatermar]] in ''Zuud-Hollaand'' mit 121.840 inwönnern.
-* [[Dordrecht|Dördrech]] in ''Zuud-Hollaand'' mit 118.811 inwönnern.
-* [[Leidn]] in ''Zuud-Hollaand'' mit 117.916 inwönnern.
+·       Amsterdam in Noordholland med 780.152 inwoaners.
 
-Noast de steedn mit mear as 100.000 inwönnern zeent d'r ok nog steedn mit minner as 100.000 inwönnern dee wal wichtig zeent veur de Raandstad, zoowal mit skiednisse as mit rektevoortse bedooligen.
+·       Rotterdam in Süüdholland med 610.174 inwoaners.
 
-* [[Delft]] in ''Zuud-Hollaand'' mit 97.588 inwönnern.
-* [[Alkmaar|Alkmoar]] in ''Noord-Hollaand'' mit 93.945 inwönnern.
-* [[Skiedam]] in ''Zuud-Hollaand'' mit 75.704 inwönnern.
-* [[Gouda|Golda]] in ''Zuud-Hollaand'' mit 71.073 inwönnern.
+·       Den Haeg in ''Süüdholland'' med 494.898 inwoaners.
 
-Ok kenmarkend zeent de völle steedlike gemeantn dee laanks en tusken de greutere steedn in eploatsd zeent.
+·       Utrech in Utrecht med 311.254 inwoaners.
+
+·       Almere in Flevoland med 190.699 inwoaners.
+
+·       Hårlem in ''Noordholland'' med 150.611 inwoaners.
+
+·       Saanstad in ''Noordholland'' med 146.904 inwoaners.
+
+·       Amersfoort in ''Utrech'' med 146.571 inwoaners.
+
+·       Hoarlemmermear in ''Noordholland'' med 143.364 inwoaners.
+
+·       Sweatermear in ''Süüdholland'' med 121.840 inwoaners.
+
+·       Dördrecht in ''Süüdholland'' med 118.811 inwoaners.
+
+·       Leiden in ''Süüdholland'' med 117.916 inwoaners.
+
+
+Nåst de städen med meyr as 100.000 inwoaners sint der ouk noch städen med minder as 100.000 inwoaners, dee souwal wat geskydenisse as hüdige bedüding wal belangryk sint vöär de Randstad.
+
+·       Delft in ''Süüdholland'' med 97.588 inwoaners.
+
+·       Alkmår in ''Noordholland'' med 93.945 inwoaners.
+
+·       Skydam in ''Süüdholland'' med 75.704 inwoaners.
+
+·       Gouda in ''Süüdholland'' med 71.073 inwoaners.
+
+Ouk kenmarkend sint de völle städelike gemeynden dee lanks en tusken de gröytere städen in eploatsd sint.
 
 === Laandskop ===
 [[Bestaand:Polder Moordrecht.jpg|thumb|right|200px|Pölder i't [[Greane Heart]].]]
-t Greane Heart, t oopne midngebeed van de Raandstad, wor an-evaln döar de steedn d'r ömhinne, mit öar lich en geluud en weegn. Veuraal de buutnraand van de Raandstad hef netuurgebeedn bestoand uut zaandgroond en bosgebeedn. Nich zoo uut-estrèk as de [[Veluwe]], mear toch wichtig. De bekanste netuurgebeedn zeent:
+Et Gröne Härte, et oapene middengebeed van de Randstad, wördt ineslöäten döär de städen der ümhen, med öar lecht, geluud en weagen. Vöäral an de butenrand van de Randstad ligget natuurgebeden med sandgrund en busk. Nich sou uutestrekked as de Veluwe, mär toch belangryk. De bekendste natuurgebeden sint:
 
-* t Kustgebeed, spesjoal ezeen t [[Nasjonoal Park Zuud-Kennemerlaand]].
-* De marngebeedn i't noordlike Greane Heart, zooas t [[Noardermar]].
-* De [[Utrechse Höawelrugge]] e'[[T Gooi]] an de eastraand van de Raandstad.
-* n [[Hoarlmerholt]].
-* t [[Markermeer|Markermar]] en de [[Raandmarn]] roond [[Zuudlik Flevolaand]].
+·       Et Küstgebeed, med name et Nationaal Park Süüd-Kennemerland.
 
-== Bevölkige ==
-=== Tal van inwönnern ===
-De Raandstad hef, ofhoanklik van de begreanzige, tusken de 6,6 en 7,6 miljoen inwönnern (den loatsten zeent de vier Raandstadproveensies soamn). Meastieds wor uut-egoan van 7,1 miljoen menskn. Doarmit is t gebeed ean van de greutste agglomeroasies van [[Europa (continent)|Europa]]. A'j de steedlike regionen d'r ömhinne ok mittelt, den kö'j etwa oawer de 10 miljoen inwönnern kömn. Disse regionen zeent önner oandre [[Broabant-Stad]] (ok wal [[Broabantse Steednrieje]] öf [[Zaandstad]]), de [[Stadsregio Arnem-Nimweage]] en de [[WERV]].
+·       De marrengebeden in et noordelike Gröne Härte, sou as et Noordermar.
 
-=== Pröbleemn ===
-Mit de versteedlikige goat ok wal n poar pröbleemn mit. Hierbieje heurt n geluudsheender, luchvervuulige en kriminoaliteit.
+·       De Utrechtse Höävelrügge en et Gooi an de oustrande van de Randstad.
 
-n Apart pröbleem is t sniprpetroon det de Raandstad hef in zin bestuur. Tarwiel de Raandstad as ''ean'' gebeed ezeen wor, is d'r nich ''ean'' bestuur det 'm d'r mit beasig hoalt. Döar n gezèlskop van vier burgemeastrs en vier Kömmissoarisn van de Köninginne. Möglike lösigen hierveur zeent ean greute [[Raandstadproveensie]] d'rvan moakn, öf, zooas Stoatnlid [[Robbert Baruch]] veurstèln: zeaven proveensies, woarvan d'r vief ean Raandstadautoriteit vörmt.
+·       n Hoarlemmerholt.
 
-n'Oandr pröbleem det d'r ok is, is t feait det de Raandstad nasjonoal en internasjonoal van zoo n greut belaang is, det d'oandre plöatse, zooas t Neersassiese gebeed, 'm önwichtige voeln goat. De Raandstad is kloar de greutste antrèkr van Neerlaand, mit ok mear as de half van de [[BNP]] van t hölle Neerlaand (zea ok [[Raandstadproveensie]]), woarvan d'oandre regionen voak töt biejnoa aajt nich profitiert. Ok wor voak in de regerige ezèg det biejnoa aale beslissign dee emoakt wort in de politiek af-estèmd zeent öp de Raandstad, i't nachdeil van d'oandre regionen.
+·       t Markermar en de Randmarren rund südelik Flevoland.
 
-Wat ok noch n pröbleem is is t wönigntekört. Tarwiel t wönigntekört 'm oawer den hölle wearld ofspielt, is de Neerlaandse situoasie unieke: in teegnstellige töt de measte oandre Weastrse laandn, liekt t in de Raandstad asöf t allean moar arger wor.
+== Bevolking ==
 
-== Skiednisse ==
-De Raandstad is öntstoand i'n gebeed döarkruust van riviermöndigen dee beriekboar warn veur skjeepn, en dös de haandel stimulearn. Zee möst loatr ok diekn baawn ömme t laand önner n seaspiegl te beskèrmn teegn t woatr van de sea. Döar woatrkerigen kamn ènkle stedn i't bestoan tiejdns t 13e joarhönnert. De Raandstad bekamd stèds wichtiger en wichtiger, a't vrbeendigen mit de [[Noordzee|Noordsea]] en ok t [[Roergebeed]] har. Stèds mèr mensken kamn d'r setln, ömdet t kultureel, ekonomies en politiek ezeen goans wichtig war. t Risiko de't gebeed te völle vrstedliken zaaw is uut de wegge, ezeen det de bevölkige va't gebeed nich mear greuit, en ok ènkle instilligen zeent d'r vandoan-egoan.
+=== Inwoanertal ===
+De Randstad hevt, afhangelik van wår as y de grense trekket, tüsken de 6,6 en 7,6 miljoon inwoaners (et lätste getal is de veer Randstadprovincys by mekander). Meysttyds wördt uutegån van 7,1 miljoon lüde. Dårmed is et gebeed eyne van de gröytste verstädelikte gebeden van Europa. Med de verstädelikte streaken der ümhen der ouk by rekkend, kumt et antal oaver de 10 miljoon inwoaners. Disse streaken sint under andere Bråbant-Stad (ouk wal Bråbantse Städenryge of Sandstad), Stadsregio Arnem-Nymeagen en de WERV.
 
-N noam Raandstad is nich skiednissig, en wör pos i't tweade deil va't 20e joarhönnert verzön. Det war aakter n buro, dös t is gin gebeedseign [[toponiem]]. N noam zaaw döar [[KLM]]-öprichter [[Albert Plesman]] verzön wean, d'rmit döarverweeznd noar t feait det de stedn a'nen raand ömme t Greane Heart ligt.
+=== Problemen ===
+Verstädeliking bregt in de regel geluudshinder, luchtvervuling en kriminaliteit. En apart probleem vöär de Randstad is et versnipperde bestüür. Wyldat de Randstad as eyn gebeed eseen wördt, is der gin centraal bestüür wat sik der med bemoit. En uplössing solde weasen der eyne groute Randstadproveensy van maken, of, souas ståtenlid Robbert Baruch vöärstelden: söäven provincys, wårvan as der vyve eyne Randstadautoriteit förmet.
 
-== Stoatus ==
-=== Nasjonoalen en innernasjonoalen rölle ===
-De Raandstad is ean van de greutste agglomeroasies van d'EU a't goat oawer de wirtskaft en inwönnerntal. Tiejdns 2008 wör de Raandstad de vierde greutste ekononomiese region van Europa. Hee is ok geans wichtig öp nasjonoal en innernasjonoal gebeed. A'j nasjonoal brèngt mö'j veuraal dènkn an de regerigesseat in [[N Heeg]], de stasjionen van TV en roadio in Alkmoar en Hilleversm, e't greutsten treainstasjion van Neerlaand in Utrecht.
+En bykumstig probleem van de nationale en internationale gewichtigheid van de Randstad is dat andere strekken sik neet ehöyrd en eseen völet. Al haalt de Randstad de hälvde van et BNP van Neaderland binnen, dår kryget andere strekken håste nooit wat van med. Ouk wördt vake segd dat souwat alle politike beslissingen emaked wordt in et vöärdeyl van de Randstad, sunder ouge vöär de rest van Neaderland.
 
-Innernasjonoal is de Raandstad ok ne wichtige agglomeroasie. Zoo seatt 'm in N Heeg önner oandre t Joegoslaavje-tribunoal, t Innernasjonoal Straffnhof, t Innernasjonoal Erechtshof, Europol en Eurojust. Amsterdam is döar verskiejdne orgoanisoasjes in-edeeld as ne wèrldstad, ok döardet hee'n greut kultureal anbod hef. Doarbiej is [[Schiphol|Skiphölle]] ean van de greutste vleegfeldn van d'EU. Dit vleegfeld kömt aaktr London Heathrow, Paris Charles de Gaulle, Frankfurt International Airport en Madrid Barajas öp n viefden ploats. Van de geanse wèrld blie't stèkn biej n viertiende ploats. Veardr ligt ean van des wèrlds wichtigste hoawns in Rötterdam en de bloomnveailige'n Oalsmar is ok de greutste van de wèrld.
+Noch en probleem is et woaningentekört. Dat likt in teagenstelling töt in andere landen binnen de Randstad enkel slimmer te worden.
+
+== Geskiedenissese ==
+De Randstad is untstån in en gebeed wårin as meyrere rivyren uutmundet. Dårmed was et good te bereiken vöär skeype, dee as handel medbrachten. Ouk bouwden se der in de 13. eywe dyken en waterkeyringen üm et water van de sey buten te holden. Döär günstige ligging an de sey en meyrere rivyren had et gebeed makkelik uutwesseling oaver de Noordsey en et achterliggende Rurgebeed. Do as de Hansetyd wat up syn beloup rakeden, kunden städen as Amsterdam en Rotterdam nye handelsverdragen sluten med Sweyden en et Poolse Gdansk, wat sorgden vöär ne flinke handelsgroi, wat weader stöädig meyr lüde antröäk.
+
+Wydere verstädeliking likt neet an de örde, ümdat de bevolksgroi de lätste jåren håste stille steyt. Ouk gröttere bedryve trekket der de lätste jåren vord.
+
+De name Randstad is pas in et tweyde deyl van de 20. eyw versünnen. Et verhaal geyt dat den versinner den [[KLM]]-uprichtiger [[Albert Plesman]] was, den as der med wulde anwysen dat de städen as nen rand ümme et Gröne Härte ligget.
+
+== Ståtus ==
+
+=== Nationale en internationale rulle ===
+De Randstad is eyn van de gröytste agglomeratys van de EU wat de ekonomy en et inwoanertal angeyt. In 2008 wör de Randstad de veerdegrötste ekononomiske strekke van Europa.
+
+Landelik is de Randstad belangryk ümdat de neaderlandske regeyring tehoupe kümt in Den Haeg, landelike radio- en televisykanalen in Hilversum sittet en Utrecht et grötste treinstation van Neaderland hevt.
+
+Ouk internationaal düt de Randstad med. Ouk in Den Haeg sittet et Jugoslavie-Tribunaal, et Internationale Strafhov, et Internationale Rechtshov, Europol en Eurojust. Amsterdam steyt by verskillende organisatys as [[wearldstad]] te book weagens en grout kultureel anbud. Dårby is Skiphol de vyvdegrötste luchthaven van de EU, nå London Heathrow, Paris Charles de Gaulle, Frankfurt International Airport en Madrid Barajas. Up wearldniveau steyt et up de vyvteende steade. Wyder is de haven van Rotterdam eyne van de belangrykste in de wearld. De blomenveiling van Aalsmear de grötste van de wearld.
 
 == Kultuur ==
-An n'oandre kaant is de Raandstad ok n kultureal seantrem, mit völle museams, skaawburgn, konsertsoaln en bioskoopn. Ok feendt völle evenemèntn plak'n de Raandstad.
+De Randstad is ouk en kultureel middenpunt, med vöäle museums, skouwburgen, konsertsalen en filmhüse. Ouk wördt der regelmåtig wat up et gebeed van kunst, musik en literatuur organiseerd binnen de Randstad.
 
 [[Kategorie:Tweants artikel]]
 [[Kategorie:Streek in Noord-Hollaand]]
