*Empty MediaWiki Message*

--- a/Sallaands.mw
+++ b/Sallaands.mw
@@ -97,7 +97,7 @@ De of-ekörte ''e'', die in t Nederlaands tot ''e'' ewörren is, kan in t Sallaa
 De grammatica van t Sallaands ef veul typies Nedersaksiese kenmärken. In t grootste diel van Sallaand kennen ze t [[ieneidsmeervold]] op ''-t'' veur wärkwoorden in de tegenswoordige tied: ''wiej loopt, ieluu loopt, zee loopt''. Allienig in en rond Kampen eerst t (Old-)Ollaandse ieneidsmeervold op ''-en'': ''wiej, ieluu, zie lopen'' zo ok in [[Gällemuden]]. Verkleinwoorden wörren evörmp mit achtervoegsels as ''-ien'', ''-gien'', ''-pien'' en ''-tien'' en mit [[umluud]] in t grondwoord. Meervollen wörren miestal evörmp mit ''-en'' en ''-s'', net zo as in t Nederlaands. Allienig in t oosten komen meervolden op ''-e'' veur (''huus'' - ''huze''), zo as ok umluud in de meervoldsvörm (''bak'' - ''bäkke''). n aandere eigeneid van de dialekten van oostelik Sallaand is t be-old van de drie geslachten. De mieste Sallaandse dialekten kennen, zo as t Ollaands, allienig geslachtelike en onziedige woorden.
 
 ==Streektaalverlies en -kultivering==
-Exakte siefers over oevule Sallaanders nog dialekt praoten bin niet bekend. t Stet wel vaste dat t dialekt achteruut get, mär an de aandere kaante kriegen ok jongeren t nog wel mee. De stadsdialekten, t Zwols veurop, verdwienen t snelste. Der bin vri'j vule pläätselike zangers en bänds, en ok dialektdichters, mär die bin niet wied buten de greinzen bekend. De wat bekendere dichteres [[Johanna van Buren]] uut [[Heldern|Ellendoorn]] praotte n overgaanksdialekt tussen Sallaands en Twents, mär de spelling van eur gedichten wördden vertwentst umdat ze in n Twentse [[kraante]] verskenen. <ref>Nijen Twilhaar, Jan (2003), 'taal in stad en land: Sallands, Twents en Achterhoeks'', Den Haag: Sdu uitgevers</ref> n Sallaandse dialektmuziekgroep die n nasionale hit skoorde was t duo [[Höllenboer]], mär disse hit (''Busje komt zo'' - ''t Bussien kömp zo'') was Nederlaandstälig. In Zwolle, krek de pläätse waor t Sallaands t snelst verdwient, is der n vrie aktieve dialektverienige, die onder aandere kursussen Zwols an de volksuniversiteit gef. De Historiekamer [[Hardenbarg (stad)|Hardenbarg]] hef ok n iel aktieve dialektgroep.
+Exakte siefers over oevule Sallaanders nog dialekt praoten bin niet bekend. t Stet wel vaste dat t dialekt achteruut get, mär an de aandere kaante kriegen ok jongeren t nog wel mee. De stadsdialekten, t Zwols veurop, verdwienen t snelste. Der bin vri'j vule pläätselike zangers en bänds, en ok dialektdichters, mär die bin niet wied buten de greinzen bekend. De wat bekendere dichteres [[Johanna van Buren]] uut [[Heldern|Ellendoorn]] praotte n overgaanksdialekt tussen Sallaands en Twents, mär de spelling van eur gedichten wördden vertwentst umdat ze in n Twentse [[kraante]] verskenen. <ref>Nijen Twilhaar, Jan (2003), ''Taal in stad en land: Sallands, Twents en Achterhoeks'', Den Haag: Sdu uitgevers</ref> n Sallaandse dialektmuziekgroep die n nasionale hit skoorde was t duo [[Höllenboer]], mär disse hit (''Busje komt zo'' - ''t Bussien kömp zo'') was Nederlaandstälig. In Zwolle, krek de pläätse waor t Sallaands t snelst verdwient, is der n vrie aktieve dialektverienige, die onder aandere kursussen Zwols an de volksuniversiteit gef. De Historiekamer [[Hardenbarg (stad)|Hardenbarg]] hef ok n iel aktieve dialektgroep.
 
 == Zie ok ==
 *[[Sallaanse taalwiezer|Sallaandse taalwiezer]]
