*Empty MediaWiki Message*

--- a/Nedersaksische_veurnamen.mw
+++ b/Nedersaksische_veurnamen.mw
@@ -468,7 +468,7 @@ De tabel mit noamen geft n liest weer van Grunnegse veurnoamen, omzet vanoet t N
 
 ==Tweante==
 
-{{Dia|Disse veurnaamns bint op skreven zo as ze in [[Riesn]] oetsprökn wordt en zo ze dokumenteert bint deur [[Koarel van n Notoaris]], met hier en doar ne alternative oetsproak too voogd. (M) Steet veur ''Man'' en (V) steet veur ''Vrouw''}}
+{{Dia|Disse veurnaamns bint op skreven zo as ze in [[Riesn]] oetsprökn wordt en zo ze dokumenteert bint deur [[Koarel van n Notoaris]], met hier en doar ne alternative oetsproak too voogd. (M) Steet veur man en (V) steet veur vrouw}}
 
 {| {{prettytable}} width="60%"
 |-
