*Empty MediaWiki Message*

--- a/Liemers_(dialect).mw
+++ b/Liemers_(dialect).mw
@@ -22,11 +22,11 @@ De onderwiezer [[Arnold Tinneveld]] (1907-1977) tiekenden in de taal van [[Diem]
 ==Veurbield==
 't Begun van 't vertellegien ''’t Winterkoninkske'' in 't dialect van [[Pannerden]] (Zuudwestelijke Liemers):<ref>[http://www.lowlands-l.net/anniversary/liemers.php Lowlands-L: 't Vertellegien ''’t Winterkoninkske'' in 't dialect van Pannerden]</ref>
 
-:''’t Winterkoninkske had zien nes in ’t karschop. Now zien de oldeluj op ’n keer allebei uutgevloge. Ze wolle wat te aete veur hun jonge haole en hemme de kleintjes hillemaol allenig achtergelaote.
+:''’t Winterkoninkske had zien nes in ’t karschop. Now zien de oldeluj op ’n keer allebei uutgevloge. Ze wolle wat te aete veur hun jonge haole en hemme de kleintjes hillemaol allenig achtergelaote.''
 
-:''Nao ’n poosje kump vaoder winterkoninkske wer thuus.
+:''Nao ’n poosje kump vaoder winterkoninkske wer thuus.''
 
-:''“Wat is hier gebeurd?” zeit ie, “Wie het ollie wat gedaon, kiender? Gillie zienn hillemaol in de war.”
+:''“Wat is hier gebeurd?” zeit ie, “Wie het ollie wat gedaon, kiender? Gillie zienn hillemaol in de war.”''
 
 :''“Ach vaoder,” zegge ze, “der kwam hier net zon grote boeman vurbi-j. Dén zag der zo lillek en naor uut. Hi-j keek met zien grote oge ien ons nes. Den het ons zo bang gemak.”''
 
