*Empty MediaWiki Message*

--- a/Nedersaksisch_M.mw
+++ b/Nedersaksisch_M.mw
@@ -7,7 +7,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit M begunt''' oet 't [[Neders
 **''maon'' ([[Zuudoost-Zaand-Drèents|ZOZ]], [[Midden-Drèents|MD]], Kop van Drenthe)
 **''maone'' ([[Zuudwest-Noord-Drèents|ZWN]], [[Zuudwest-Zuud-Drèents|ZWZ]], [[Midden-Drèents|MD]], [[Zuudoost-Veen-Drèents|ZOZ]])
 *[[Grunnegs]]: ''moan'' (sumtieds ''moane'' zègd om de zin beter lopen te lòten)
-*''[[Sallaans]]:
+*[[Sallaans]]:
 **''moane''
 *[[Stellingwarfs]]: ''[[Maone (eerde)|maone]]''
 *[[Tweants]]: ''moan{{small()|e}}''
@@ -45,7 +45,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit M begunt''' oet 't [[Neders
 
 *[[Grönnegs]]:
 **''mais'' (plaant)
-**''tusselwaait{{small()|en}} (vrucht, stof)
+**''tusselwaait{{small()|en}}'' (vrucht, stof)
 *[[Tweants]]: ''mais''
 
 ==Maïshakselaar==
@@ -54,7 +54,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit M begunt''' oet 't [[Neders
 
 *[[Achterhooks]]: ''maïskneuzer''
 *[[Grönnegs]]: ''maisknakker''
-*''[[Sallaans]]:
+*[[Sallaans]]:
 **''maiskneuzer''
 *[[Tweants]]: ''{{small()|mais}}kneuzer''
 
@@ -79,7 +79,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit M begunt''' oet 't [[Neders
 *[[Oostfreisk]]:
 **''man'' (Platduutske skriefwies: ''Mann'')
 **''kirrel'' (Platduutske skriefwies: ''Keerl'')
-*''[[Sallaans]]:
+*[[Sallaans]]:
 **''man''
 **''m'neer''
 **''heer''
@@ -161,7 +161,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit M begunt''' oet 't [[Neders
 **''klaorspeulen''
 **''de hand an jezelf slaon'' ([[Ugchelen]])
 **''schik mit jezelf maken'' ([[Nunspeet]])
-**''zelfbevrediging'', zelfbevrejiging''
+**''zelfbevrediging'', zelfbevrejiging
 **''mastreberen''
 
 ==Mattenklopper==
@@ -188,7 +188,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit M begunt''' oet 't [[Neders
 *[[Oostfreisk]]:
 **{{small()|Zee}} (Platduutske skriefwies: {{small()|See}})
 **Möwe/Möve (oet Hoogduutsk)
-*''[[Sallaans]]:
+*[[Sallaans]]:
 **''mewe''
 *[[Stellingwarfs]]: ...
 *[[Tweants]]: ...
@@ -220,7 +220,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit M begunt''' oet 't [[Neders
 **''famke''
 **''wücht''
 **''foun'' (negatief; kribsk wucht, in dat Harlingerland is t ein normaal wucht)
-*''[[Sallaans]]:
+*[[Sallaans]]:
 **''meissie''
 **''wicht''/ ''wichie''
 **''deerne'' / ''dearntie''
@@ -279,7 +279,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit M begunt''' oet 't [[Neders
 * [[Grönnegs]]: 
 **''mìns{{small()|k}}''
 **''mèns{{small()|k}}''
-*''[[Sallaans]]:
+*[[Sallaans]]:
 **''meanse''
 **''mèènse''
 * [[Stellingwarfs]]: ''meensk{{small()|e}}'', ''meens''
@@ -395,7 +395,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit M begunt''' oet 't [[Neders
 *[[Grönnegs]]: 
 **''keroazie'' (van t Fraanse/Engelse ''courage'')
 **''moud'' (nait voak broekt, t ôflaaidene woord ''moudeg'' juust wel meer broek as ''keroazeg'' of ''keroazjeus'')
-*''[[Sallaans]]:
+*[[Sallaans]]:
 **''moed''
 **''dörf''
 *[[Stellingwarfs]]: ...
@@ -485,7 +485,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit M begunt''' oet 't [[Neders
 
 * [[Achterhooks]]: ''weule''
 * [[Grönnegs]]: ''mool''/''mole'', ''mòl''/''mòle''
-*''[[Sallaans]]:
+*[[Sallaans]]:
 **''molle''
 **''wöle''
 * [[Tweants]]: 
@@ -565,7 +565,7 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit M begunt''' oet 't [[Neders
 *[[Grönnegs]]: 
 **''klaaien''
 **''graimen''
-*''[[Sallaans]]:
+*[[Sallaans]]:
 **''gastern''
 **''knuien''
 **''smeern''
@@ -584,12 +584,12 @@ Hier stoat woorden die of in 't '''Nedersaksisch mit M begunt''' oet 't [[Neders
 **''sloeren'' ([[Armelo]], [[Nunspeet]])
 **''sloekeren'' ([[Heerde]])
 **''slateren'' ([[Apeldoorne (stad)|Apeldoorne]])
-**''slempen'', ''stempen ([[Apeldoorne (stad)|Apeldoorne]])
+**''slempen'', ''stempen'' ([[Apeldoorne (stad)|Apeldoorne]])
 **''moeken'' ([[Armelo]], [[Niekark]], [[Lunteren]], [[Bunsjoten]])
 **''morsen'', ''mossen''
 **''otten'' ([[Apeldoorne (stad)|Apeldoorne]], [[Lieren]], [[Hall]])
 **''tuieren'' ([[Une]], [[Apeldoorne (stad)|Apeldoorne]], [[Ugchelen]], [[Hall]])
-**''kledderen'', kliederen''
+**''kledderen'', kliederen
 **''muizen'' ([[Heerde]], [[Waopenvelde]])
 
 ==Muis==
