/* Kenmarken van ne internetmeme */

--- a/Internetmeme.mw
+++ b/Internetmeme.mw
@@ -8,7 +8,7 @@ Meems volget gin vast, vöäraf bepåld formaat. Foto's van echte lüde en deers
 Oavereynstemming oaver wat ne meme inhöldt wördt voordan uperekked. Et vöärnaamste is herhaling en kleine anpassingen in de grap, soudat de verwysing når de oarsprungelike meem oavereande blivt mär nu relevant is vöär ne lecht afwykende situaty.
 
 Internetmeems hebbet vake twey vaste kenmarken: se künnet up kreative wyse nåmaked worden en se warket intertekstueel. Et eyrste kenmark utet sik in parodien, remixes en mashups. 
-En vöärbeald van en parody is de "undergang van Hitler", up ne scène uut de film Der Untergang. Dårin krigt Hitler van syne generaals te höyren dat et neet al te best geyt med den oorlog, wårup as hee slim van sik afbekket. In de parody wordet de undertitels by disse scène gebruked üm der totaal wat anders van te maken. En vöärbeald van intertekstualiteit untsteyt as twey verskillende kulturele utings med mekander samenevoogd wordet. En vöärbeald was den amerikaansken politikus Mitt Romney syne uutspråke van "mappen vul med vrouwlüde" tydens en presidentieel debat in 2021, den as monteerd wör oaver en deyl van de musikvideo van et koreaanske nummer 'Gangnam Style', wårin as den artist Psy vöär en windapparaat steyt wåruut nen heylen fossen papyr langs em hen eblåsen wördt. Döär de intertekstualiteit untsteyt by dat beald ne nye bedüding.
+En vöärbeald van en parody is de "undergang van Hitler", up ne scène uut de film Der Untergang. Dårin krigt Hitler van syne generaals te höyren dat et neet al te best geyt med den oorlog, wårup as hee slim van sik afbekket. In de parody wordet de undertitels by disse scène gebruked üm der totaal wat anders van te maken, byvöärbeald uneynigheid oaver een uutstäpken når nen derentuin. En vöärbeald van intertekstualiteit untsteyt as twey verskillende kulturele utings med mekander samenevoogd wordet. En vöärbeald was den amerikaansken politikus Mitt Romney syne uutspråke van "mappen vul med vrouwlüde" tydens en presidentieel debat in 2021, den as monteerd wör oaver en deyl van de musikvideo van et koreaanske nummer 'Gangnam Style', wårin as den artist Psy vöär en windapparaat steyt wåruut nen heylen fossen papyr langs em hen eblåsen wördt. Döär de intertekstualiteit untsteyt by dat beald ne nye bedüding.
 
 Hougleraar biology an de Universiteit van Texas, Lauren Ancel Mayers, meynet at meems sik oaver sociale media lyk verspreidet as seekdes. Et is de basis van [[virale marketing]], ne technik wårby as marketingbureaus proberet nen meem te maken.
 
