*Empty MediaWiki Message*

--- a/Irony.mw
+++ b/Irony.mw
@@ -1,4 +1,4 @@
-''Irony'' (uut [[Grieks|oldgreeksk]] ''εἰρωνεία'' "eirōneía", oaversat as 'veinsde unweatendheid'), is en retorisk middel, [[literatuur|literären]] technik of geböärtenis wårby dat wat up et eyrste ouge likt te weasen as verwacht, radikaal anders is.
+'''Irony''' (uut [[Grieks|oldgreeksk]] ''εἰρωνεία'' "eirōneía", oaversat as 'veinsde unweatendheid'), is en retorisk middel, [[literatuur|literären]] technik of geböärtenis wårby dat wat up et eyrste ouge likt te weasen as verwacht, radikaal anders is.
 
 Irony kan verdeyld worden in meyrdere soorten, sou as spröäkene irony, dramatiske irony en situationele irony. Disse wordet vake bruked üm de wårheid in et teagendeyl te benådrükken. Ymand kan de bedüding van ne uutspråke ekstra kracht bysetten döär upsettelik wöörde te gebruken dee as et teagenoaverestelde bewäret, et teagendeyl van de wårheid untkennet, of en feitelik verband drastisk en vöärdehandliggend af te swakken.
 
