*Empty MediaWiki Message*

--- a/Anderhalve_eeuw_Zwols._Vocaalveranderingsprocessen_in_de_periode_1838-1972.mw
+++ b/Anderhalve_eeuw_Zwols._Vocaalveranderingsprocessen_in_de_periode_1838-1972.mw
@@ -8,3 +8,4 @@ Et belangriekste in dit boek is hoe as de klanken in de leste 150 jaor zich ontw
 {{Dialekt|sdz}}
 [[Kategorie:literatuur]]
 [[Kategorie:Zwolle]]
+[[Kategorie:Nedersaksische taalkunde]]
