--- a/Anderhalve_eeuw_Zwols._Vocaalveranderingsprocessen_in_de_periode_1838-1972.mw
+++ b/Anderhalve_eeuw_Zwols._Vocaalveranderingsprocessen_in_de_periode_1838-1972.mw
@@ -2,7 +2,7 @@
 
 Het boek begint met een beschrieving van [[Zwolle]] in de [[19e eeuw]] en hoe as et Zwols stund in de samenleaving toen en now. In et boek wördt vervolgens duudelik emääkt wat kenmärkend is veur et Zwols en wat de verschillen bint tussen de verschillende wieken van Zwolle. Hiernao wördt een bulte bronnen gebruukt uut de 19e eeuw en daornao een bulte bronnen veur et Zwols van now.
 
-Et belangriekste in dit boek is hoe as de klanken in de leste 150 jaor zich ontwikkeld hebt in et Zwols. Er hebt völle veranderings ewest, en er kan ok een ezegd wörden wanneer dit zo gebeurd isse. In de 19e eeuw veranderden beveurbield de ao in jaor en waor nao een öö (jöör, wöör) en de ee in neet en zeen in een lange ie ([i:]) en läter nao een körte ie ([i]). Hiernao wördt beschreaven waorumme as de veranderings gebeurd bint en hoe as zie mekäre beïnvloed hebt en of de [[Nederlaands|Nederlaandse]] [[Standaardtaal|standaardtääl]] hier wat met te mäken hef.<ref>https://www.ijsselacademie.nl/publicaties/anderhalve-eeuw-zwols-vocaalveranderingsprocessen-in-de-periode-1838-1972/</ref> Ook wördt er nao de verskillen en geliekenissen met de dialekten um Zwolle ekeken.
+Et belangriekste in dit boek is hoe as de klanken in de leste 150 jaor zich ontwikkeld hebt in et Zwols. Er hebt völle veranderings ewest, en er kan ok een ezegd wörden wanneer dit zo gebeurd isse. Zo veranderden beveurbield ''i'j'' nao ''ie'', de ''ao'' in ''jaor'' en ''waor'' nao een ''öö'' (''jöör'', ''wöör'') en de ''ee'' in ''neet'' en ''zeen'' in een lange ie ([i:]) en läter nao een körte ie ([i]). Hiernao wördt beschreaven waorumme as de veranderings gebeurd bint en hoe as zie mekäre beïnvloed hebt en of de [[Nederlaands|Nederlaandse]] [[Standaardtaal|standaardtääl]] hier wat met te mäken hef.<ref>https://www.ijsselacademie.nl/publicaties/anderhalve-eeuw-zwols-vocaalveranderingsprocessen-in-de-periode-1838-1972/</ref> Ook wördt er nao de verskillen en geliekenissen met de dialekten um Zwolle ekeken.
 ==Verwiezings==
 <references/>
 {{Dialekt|sdz}}
