--- a/Zwols.mw
+++ b/Zwols.mw
@@ -11,7 +11,7 @@ Naodät de [[Verienigde Staoten van Amerika|Amerikaanse]] [[taalkunde|taalkundig
 Een eigenöördigeid van 't Zwols is dät de Iesselakademie 't gebruuk van de ää en ä veurskrif, määr dät 't op de mieste plekken veurkump as ''ae'', ok in t Zwolse woordeboek, dus dan wört 't maer.
 
 ==Verspreiding==
-Volgens de [[Taaltelling Nedersaksisch]] van 't [[Nedersaksisch Instituut]] (2003) zegt 61% van de ondervraogde mensen in Zwolle, Daeventer en Kampen heur eigen stadsdialect te kunnen praoten.<ref>Henk Bloemhoff, Jurjen van der Kooi, Hermann Niebaum en Siemon Reker (red.) (2008), ''Handboek Nedersaksische Taal- en Letterkunde'', Assen: Van Gorcum (p.310)</ref>
+Volgens de [[Taaltelling Nedersaksisch]] van 't [[Nedersaksisch Instituut]] (2003) zegt 61% van de ondervraogde mensen in Zwolle, Dèventer en Kampen heur eigen stadsdialect te kunnen praoten.<ref>Henk Bloemhoff, Jurjen van der Kooi, Hermann Niebaum en Siemon Reker (red.) (2008), ''Handboek Nedersaksische Taal- en Letterkunde'', Assen: Van Gorcum (p.310)</ref>
 
 Ze praoten veural Zwols in de oldere wieken van Zwolle zo as [[Assendörp]], de [[Pierik (Zwolle)|Pierik]], [[Kamperpoorte]] en de Zee-eldenbuurte in de [[Wipstrik]]. Kamperpoorte ef zien eigen [[sosiolekt]]; 't is ärg informeel en ston ok onder grote invloed van 't [[Bargoens]]. Een veurbeeld: ''Ze ef n bos olt veur de deure'' (ze ef grote börsten). Zuksoort uutdrukkingen kommen natuurlijk op andere plekken ok veur, maer wörren meestentieds as typerend ezien veur dit soort sosiolekten, wöör ze vaeker gebruukt wörren.
 
@@ -25,12 +25,12 @@ De Zwolstalige stukkiesbundel ''Mien Ome Jan...'' deur [[Minke Kraijer]] (Uitgev
 Van [[Willem Kloeke]], de va van taalkundige [[G.G. Kloeke]], kwammen in 1931 de ''Zwolsche Sketsies'' uut (Thieme). Minke Kraijer van de Dialektkringe Zwolle skrif alle wèken een kolumn in 't Zwols in uus-an-uus-kräntien ''De Peperbus'' (De Pèperbusse) en skrif ''Mien Ome Jan...'' (2007), erinneringen an aer ome, in 't Zwols en Nederlands. Van Loes van 't Haar-de Vries verskeen ok in 2007 de reseptenbundel ''In de Zwolse pot''. Veur de strèèktaal van West-Aoveriessel, wööronder 't Zwols, ef 't strèèkkenniscentrum de [[Iesselakademie]] (IJsselacademie) spellingsrichtlienden ontwörpen.<ref>[http://www.ijsselacademie.nl/ija/taal/spellingsbrochure/inhoudsopgave.asp Spellingsrichtlienden van de Iesselakademie veur t West-Aoveriessels en Oost-Veluws]</ref> Ok Wikipedie ef een eigen spelling (veur alle Nedersaksiese dialekten) ontwörpen, die is ok gebruukt in dit ärtikel.
 
 ===Zwols woordeboek===
-In november 2009 kwam bi'j de Iesselakademie een uutputtend Zwols woordeboek uut: ''Op zien Zwols: Woordenboek van de Zwolse taal''. 't Is eskröven deur Minke Kraijer, Henk Mulder, Dick Visscher en [[Philomène Bloemhoff]]. Vanof 1986 ebben ze Zwolse woorden en uutdrukkingen op pepier ezet en in 1999 is 't wärk an 't boek begunnen<ref>[http://www.destentor.nl/regio/zwolle/5721982/Zwols-woordenboek-ligt-volgende-week-in-winkels.ece De Stentor aover t verskienen van t Zwols woordeboek]</ref><ref>[http://www.destentor.nl/algemeen/cultuurstn/special/streeksite/2696410/De-drie-varianten-van-donderkop.ece De Stentor aover t Zwols woordeboek]</ref>.
+In november 2009 kwam bi'j de Iesselakademie et (vermuuiende) Zwols woordeboek uut: ''Op zien Zwols: Woordenboek van de Zwolse taal''. 't Is eskröven deur Minke Kraijer, Henk Mulder, Dick Visscher en [[Philomène Bloemhoff]]. Vanof 1986 ebben ze Zwolse woorden en uutdrukkingen op pepier ezet en in 1999 is 't wärk an 't boek begunnen<ref>[http://www.destentor.nl/regio/zwolle/5721982/Zwols-woordenboek-ligt-volgende-week-in-winkels.ece De Stentor aover t verskienen van t Zwols woordeboek]</ref><ref>[http://www.destentor.nl/algemeen/cultuurstn/special/streeksite/2696410/De-drie-varianten-van-donderkop.ece De Stentor aover t Zwols woordeboek]</ref>.
 
 ===Verdere aktiviteiten===
-De Iesselakademie örganiseert 't ''Groot Zwols Taaldictee''<ref>[http://www.deweekkrant.nl/artikel/2008/februari/11/groot_zwols_taaldictee_in_het_gemeentehuis De Waekkrante aover t Groot Zwols Taaldictee]</ref> en de cursus Zwolse taal en cultuur.<ref>[http://www.ijsselacademie.nl/ija/taal/watwijdoen.asp Streektaalactiviteiten van de Iesselakademie]</ref> Disse cursus, now därtien keer egöven, ad de eerste jören öördig wat belangstelling, maer kon in 2007 niet deurgaon umdät der te weinig kursisten waeren.<ref name="Stentor20081029">[http://www.destentor.nl/regio/zwolle/zwolle/3949079/Gebrek-aan-interesse-nekt-dialect.ece?startshow=null&startSlide=null ''Gebrek aan interesse nekt dialect''. De Stentor, 29 oktober 2008]</ref> Later is de cursus nog wè weer een antal jören egöven umme in 2013 veur de leste maol egöven te wörren. Der is värder een Dialektkringe Zwolle; veural oldere mensen bezuken döör de bi'jienkomsten van.<ref name="Stentor20081029">[http://www.destentor.nl/regio/zwolle/zwolle/3949079/Gebrek-aan-interesse-nekt-dialect.ece?startshow=null&startSlide=null ''Gebrek aan interesse nekt dialect''. De Stentor, 29 oktober 2008]</ref>
+De Iesselakademie örganiseert 't ''Groot Zwols Taaldictee''<ref>[http://www.deweekkrant.nl/artikel/2008/februari/11/groot_zwols_taaldictee_in_het_gemeentehuis De Waekkrante aover t Groot Zwols Taaldictee]</ref> en de cursus Zwolse taal en cultuur.<ref>[http://www.ijsselacademie.nl/ija/taal/watwijdoen.asp Streektaalactiviteiten van de Iesselakademie]</ref> Disse cursus, now därtien keer egöven, ad de eerste jören öördig wat belangstelling, maer kon in 2007 niet deurgaon umdät der te weinig kursisten waeren.<ref name="Stentor20081029">[http://www.destentor.nl/regio/zwolle/zwolle/3949079/Gebrek-aan-interesse-nekt-dialect.ece?startshow=null&startSlide=null ''Gebrek aan interesse nekt dialect''. De Stentor, 29 oktober 2008]</ref> Later is de cursus nog wè weer een antal jören egeaven umme in 2013 veur de leste maol egeaven te wörren. Der is värder een Dialektkringe Zwolle; veural oldere mensen bezuken döör de bi'jienkomsten van.<ref name="Stentor20081029">[http://www.destentor.nl/regio/zwolle/zwolle/3949079/Gebrek-aan-interesse-nekt-dialect.ece?startshow=null&startSlide=null ''Gebrek aan interesse nekt dialect''. De Stentor, 29 oktober 2008]</ref>
 
-Der wört ok in 't Zwols ezungen, vaeke aover bekende Zwollenaeren of bekende plasen in Zwolle. Een zangeres die 't Zwols in cärnevalachtige sfeer gebruukt is [[Tante Kippe]]. Ok de jazzmuzikant [[Bert Vrieling]] zingt wè in 't Zwols.<ref>[http://www.ijsselacademie.nl/ija/taal/luuster.asp De Iesselakademie aover Bert Vrieling, met zien lied ''Meziek'']</ref>
+Der wört ok in 't Zwols ezungen, vaeke aover bekende Zwollenaeren of bekende plasen in Zwolle. Een zangeresse die 't Zwols in cärnevalachtige sfeer gebruukt is [[Tante Kippe]]. Ok de jazzmuzikant [[Bert Vrieling]] zingt wè in 't Zwols.<ref>[http://www.ijsselacademie.nl/ija/taal/luuster.asp De Iesselakademie aover Bert Vrieling, met zien lied ''Meziek'']</ref>
 
 ==Een paer veurbeelden==
 Ieronder staon een paer Zwolse gezegden en uutdrukkingen in de bargoense sfeer met döörachter de Nederlandse vertaling.
