--- a/Nedersaksisch.mw
+++ b/Nedersaksisch.mw
@@ -56,58 +56,60 @@ De heufdverdeling van et Nedersaksisch löp zo as ezeegd 'niet' langes et gesche
 Et antal sprekers van et Nedersaksisch (in [[Nederlaand]]) is volgens een telling uut [[2003]] (bron: ''taaltelling Nedersaksisch'' van [[Henk Bloemhoff]]) zo'n 1.616.000. Daor zatten de 150.000 sprekers uut de rest van [[Nederlaand]] (veural de [[Raandstad (gebeed)|Raandstad]]) en et butenlaand al bie in ([[Kannede|Kanada]], [[Australi'je (land)|Australië]], [[Verienigde Staoten van Amerika|Amerika]], [[Niej-Zeelaand]]). De 1.466.000 sprekers die in et Nedersaksische taalgebied woenen, vormen 9,1% van de Nederlaandse bevolking en woenen in verschillende regio's; dit ku'j hieronder in de tabel oek aoflezen. Je mutten niet vergeten dat et veur een groot part um ouwere meensen geet en dat et sprekersantal daorumme oek rap umlege geet. Et antal tweede- of dardetaalsprekers nimp de aof-eleupen tied wel wat toe. Oek is der de leste tied meer andacht veur et opniej anleren van et Nedersaksisch bie de kienders. Dit mut veurkoemen dat et antal niet nog veerder zakt. Eerder as 2003 is der nog nooit een telling ewest veur et hele Nedersaksische taalgebied.<ref>Handboek Nedersaksische taal- en letterkunde</ref>
 
 {| {{prettytable}} 
-!Nedersaksische gebiejen
-!Antal sprekers
-!Percentazie
+!Gebied
+!Antal sprekers thuus<ref>Thuus NDS en NDS-NL bie mekaar op eteld.
+!Antal sprekers totaal<ref>Maotig+goed+zeer goed.
+!Percentazie sprekers
 |- 
-|[[Tweante|Twente]]
-|338.000
-|62%
+|Groning
+|261.972
+|446.387
+|77,7%
 |- 
-|[[Grunnen (provìnzie)|Groningen]]
-|258.000
-|46%
+|Twente
+|334.180
+|412.843
+|76,1%
+|-
+|West-Overiessel
+|326.137
+|378.505
+|73,0%
 |- 
-|[[Drenthe]]
-|248.000
-|53%
+|Drenthe
+|255.243
+|369.595
+|76,6%
 |- 
-|de [[Achterhoek]]
-|216.000
-|60%
+|Achterhoek
+|210.984
+|258.420
+|73,0%
 |- 
-|[[Sallaand]]
-|172.000
-|35%
+|Veluwe
+|174.825
+|229.635
+|48,6%
 |- 
-|de [[Veluwe]]
-|172.000
-|30%
+|Steenwiekerlaand
+|21.119
+|28.982
+|67,4%
 |- 
-|[[Stienwiekerlaand]]<br />(de [[Kop van Overiessel]])
-|20.000
-|48%
+|West-Stellingwarf
+|13.832
+|16.796
+|64,6%
 |- 
-|[[Urk]]
-|15.000
-|97%
-|- 
-|[[Weststellingwarf]]
-|14.000
-|53%
-|- 
-|[[Ooststellingwarf]]{{Info|Haulerwiek en Waskemar niet mee-erekend}}
-|7.000
-|30%
-|- 
-|noordoostelik [[Utrecht (previnsie)|Utrecht]]
-|5.000
-|12%
-|- 
-|oostelik [[Kölmerland en Nijkruusland|Kollumerlaand]]
-|1.000
-|50%
-|- 
+|Ooststellingwarf
+|6.434
+|10.492
+|48,8%
+|-
+|Totaal
+|≈1,6 miljoen
+|≈2,15 miljoen
+|70,9% 
 |}
 
 Et antal sprekers van et [[Nederlaands Leegsaksisch|Nederlaands-Nedersaksisch]] in vergelieking tot aandere talen van Nederlaand:
