--- a/Nedersaksisch.mw
+++ b/Nedersaksisch.mw
@@ -57,8 +57,8 @@ Et antal sprekers van et Nedersaksisch (in [[Nederlaand]]) is volgens een tellin
 
 {| {{prettytable}} 
 !Gebied
-!Antal sprekers thuus<ref>Thuus NDS en NDS-NL bie mekaar op eteld.
-!Antal sprekers totaal<ref>Maotig+goed+zeer goed.
+!Antal sprekers thuus<ref>Thuus NDS en NDS-NL bie mekaar op eteld.</ref>
+!Antal sprekers totaal<ref>Maotig+goed+zeer goed.</ref>
 !Percentazie sprekers
 |- 
 |Groning
