--- a/Nedersaksisch.mw
+++ b/Nedersaksisch.mw
@@ -56,54 +56,54 @@ De heufdverdeling van et Nedersaksisch löp zo as ezeegd 'niet' langes et gesche
 Et antal sprekers van et Nedersaksisch (in [[Nederlaand]]) is volgens een telling uut [[2003]] (bron: ''taaltelling Nedersaksisch'' van [[Henk Bloemhoff]]) zo'n 1.616.000. Daor zatten de 150.000 sprekers uut de rest van [[Nederlaand]] (veural de [[Raandstad (gebeed)|Raandstad]]) en et butenlaand al bie in ([[Kannede|Kanada]], [[Australi'je (land)|Australië]], [[Verienigde Staoten van Amerika|Amerika]], [[Niej-Zeelaand]]). De 1.466.000 sprekers die in et Nedersaksische taalgebied woenen, vormen 9,1% van de Nederlaandse bevolking en woenen in verschillende regio's; dit ku'j hieronder in de tabel oek aoflezen. Je mutten niet vergeten dat et veur een groot part um ouwere meensen geet en dat et sprekersantal daorumme oek rap umlege geet. Et antal tweede- of dardetaalsprekers nimp de aof-eleupen tied wel wat toe. Oek is der de leste tied meer andacht veur et opniej anleren van et Nedersaksisch bie de kienders. Dit mut veurkoemen dat et antal niet nog veerder zakt. Eerder as 2003 is der nog nooit een telling ewest veur et hele Nedersaksische taalgebied.<ref>Handboek Nedersaksische taal- en letterkunde</ref>
 
 {| {{prettytable}} 
-!Gebied
+!Gebiejen<ref>Bekiek p 8. in [https://www.stellingia.nl/wp-content/uploads/2014/12/Taaltelling-Nedersaksisch-1.pdf Taaltelling Nedersaksisch] veur de grenzen van de gebiejen.</ref>
 !Antal sprekers thuus<ref>Thuus NDS en NDS-NL bie mekaar op eteld.</ref>
 !Antal sprekers totaal<ref>Maotig+goed+zeer goed.</ref>
-!Percentazie sprekers
+!Percentazie antal sprekers totaal
 |- 
 |Groning
-|261.972
-|446.387
+|262.000
+|446.400
 |77,7%
 |- 
 |Twente
-|334.180
-|412.843
+|334.200
+|412.800
 |76,1%
 |-
 |West-Overiessel
-|326.137
-|378.505
+|326.100
+|378.500
 |73,0%
 |- 
 |Drenthe
-|255.243
-|369.595
+|255.200
+|369.600
 |76,6%
 |- 
 |Achterhoek
-|210.984
-|258.420
+|211.000
+|258.400
 |73,0%
 |- 
 |Veluwe
-|174.825
-|229.635
+|174.800
+|229.600
 |48,6%
 |- 
 |Steenwiekerlaand
-|21.119
-|28.982
+|21.100
+|29.000
 |67,4%
 |- 
 |West-Stellingwarf
-|13.832
-|16.796
+|13.800
+|16.800
 |64,6%
 |- 
 |Ooststellingwarf
-|6.434
-|10.492
+|6.400
+|10.500
 |48,8%
 |-
 |Totaal
