*Empty MediaWiki Message*

--- a/Nedersaksisch.mw
+++ b/Nedersaksisch.mw
@@ -252,7 +252,7 @@ In de tabel hieronder zie'j een koppel overeenkomsten en verschillen tussen de v
 * Stoffelike bievoeglike naamwoorden kriegen een umluud (holt → hölten = hout, houten), oek dit is veural zo in et Sallaands, Twents, Achterhoeks en et Oost-Veluws, in de aandere dialekten kömp et (haost) niet veur.
 
 ====[[Veurnaamwoord]]en====
-* De objektsvorm van et persoonlik veurnaamwoord wördt vake gebruukt in plaotse van 'zich' (hij wast hum = hij wast zich), daornaost he'j oek ''hij wast zien eigen'' 'of 'hij wast zich/zuk/zok''.
+* De objektsvorm van et persoonlik veurnaamwoord wördt vake gebruukt in plaotse van 'zich' (hij wast hum = hij wast zich), daornaost he'j oek ''hij wast zien eigen'' of ''hij wast zich/zuk/zok''.
 * Net as in et [[Oudsaksisch]] en et [[Oudengels]] wörden in sommige streken 'hij' veur zowel 'hij' as 'zee' (enkelvoud) gebruukt. Dit kan soms tot verwarring leien: wee wast wee in ''hij wast hum''? Wast e zien eigen, wast e een keerl, of wast e een deerne?
 
 ====[[Warkwoord]]en====
